// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery component should render correctly with props 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Gallery
    category="all"
    gallery={Array []}
  />
</Provider>
`;

exports[`Gallery component should render correctly without props 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Gallery />
</Provider>
`;
